results/securify2/bad_randomness_guess_the_random_number.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/ast/solc_version_pattern.py", line 20, in find_matches
    ast_root = self.get_ast_root()
  File "/sec/securify/analyses/patterns/ast/abstract_ast_pattern.py", line 18, in get_ast_root
    ast_root = self.analysis_context.ast
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:12:5: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
    function GuessTheRandomNumberChallenge() public payable {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:15:24: TypeError: Wrong argument count for function call: 2 arguments given but expected 1. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.
        answer = uint8(keccak256(block.blockhash(block.number - 1), now));
                       ^-----------------------------------------------^

fixed_pragma.sol:15:18: TypeError: Explicit type conversion not allowed from "bytes32" to "uint8".
        answer = uint8(keccak256(block.blockhash(block.number - 1), now));
                 ^------------------------------------------------------^

        > command: `solc --allow-paths / --standard-json`
        > return code: `0`
        > stderr:
        {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:12:5: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.\n    function GuessTheRandomNumberChallenge() public payable {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.","severity":"error","sourceLocation":{"end":452,"file":"fixed_pragma.sol","start":234},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:12:5: Warning: This declaration shadows an existing declaration.\n    function GuessTheRandomNumberChallenge() public payable {\n    ^ (Relevant source part starts here and spans across multiple lines).\nfixed_pragma.sol:9:1: The shadowed declaration is here:\ncontract GuessTheRandomNumberChallenge {\n^ (Relevant source part starts here and spans across multiple lines).\n","message":"This declaration shadows an existing declaration.","secondarySourceLocations":[{"end":730,"file":"fixed_pragma.sol","message":"The shadowed declaration is here:","start":170}],"severity":"warning","sourceLocation":{"end":452,"file":"fixed_pragma.sol","start":234},"type":"Warning"},{"component":"general","formattedMessage":"fixed_pragma.sol:15:24: TypeError: Wrong argument count for function call: 2 arguments given but expected 1. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.\n        answer = uint8(keccak256(block.blockhash(block.number - 1), now));\n                       ^-----------------------------------------------^\n","message":"Wrong argument count for function call: 2 arguments given but expected 1. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.","severity":"error","sourceLocation":{"end":444,"file":"fixed_pragma.sol","start":395},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:15:18: TypeError: Explicit type conversion not allowed from \"bytes32\" to \"uint8\".\n        answer = uint8(keccak256(block.blockhash(block.number - 1), now));\n                 ^------------------------------------------------------^\n","message":"Explicit type conversion not allowed from \"bytes32\" to \"uint8\".","severity":"error","sourceLocation":{"end":445,"file":"fixed_pragma.sol","start":389},"type":"TypeError"}],"sources":{}}

        > stdout:
